# airbnb-clone-backend

./: .gitignore  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_booking_experience_duration.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_rename_message_message_text.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_room.py  0003_alter_review_user.py  0004_alter_review_experience.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options_and_more.py  0004_room_category.py  0005_alter_room_owner.py  (+1 more)
users/: models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  views.py
study_note/: 0day1.md  0day2.md  0day3.md  0day4.md  11 REST API.md  12 USERS API.md
(+9 files in other folders)
