[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["jrsky723 <jrsky723@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
